fixed timebar/sidebar overlap issue (#412)

--- a/app/styles/components/map/c-durationpicker.scss
+++ b/app/styles/components/map/c-durationpicker.scss
@@ -13,7 +13,7 @@
   position: absolute;
   text-align: center;
   top: 0;
-  z-index: 99;
+  z-index: 5;
 
   .c-durationpicker-text {
     display: inline-block;
